# unitree-sdk

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  local_traversability_node.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml  release.yml  ros2-build.yml
cyclonedds/: cyclonedds.xml
g1_sdk/: package.xml  setup.cfg  setup.py
g1_sdk/config/: nav2_parameters.yaml  nav2_params.yaml
g1_sdk/g1_sdk/: __init__.py  g1_jointstate.py  g1_loco_action.py  g1_nav2_api.py  g1_odom.py  g1_teleop.py  waypoint_manager.py
g1_sdk/launch/: base_control_launch.py  g1_control_launch.py  nav2_launch.py  rtabmap_launch.py  slam_launch.py
g1_sdk/resource/: g1_sdk
g1_sdk/urdf/: g1_23dof.urdf
go2_auto_dock/: package.xml  setup.cfg  setup.py
go2_auto_dock/SLAM_config/: my_map.yaml
go2_auto_dock/config/unitree_go2_cam/: ost.txt
go2_auto_dock/config/unitree_go2_cam_indiana/: ost.txt  parameter_temp.txt
go2_auto_dock/go2_auto_dock/: __init__.py  apriltag_detector.py  go2_apriltag_detector.py  go2_camera_show_img.py  go2_camera_with_adjustable_publisher.py  go2_dock.py  go2_nav_to_charger.py  go2_nav_to_charger_final.py  go2_tag_charger.py  go2_tag_follower.py
go2_auto_dock/launch/: usb_camera_calibrated_launch.py  usb_camera_launch.py  usb_camera_original_launch.py  usb_camera_v4l2_launch.py
go2_auto_dock/unitree_go2_auto_dock/: go2_dock.py
go2_sdk/: package.xml  setup.py
go2_sdk/config/: nav2_params.yaml
go2_sdk/go2_sdk/: crsf_controller.py  d435_camera_stream.py  d435_obstacle_dector.py  go2_camera.py  go2_camera_stream.py  go2_dock.py  go2_lidar_localization.py  go2_movement.py  go2_nav2_api.py  go2_sport_action.py  joint_state.py  local_traversability_node.py  odom_relay.py  om1_path.py  om_path.py  om_path_trave_base.py  pose_to_tf.py  waypoint_manager.py
go2_sdk/launch/: base_control_launch.py  crsf_control_launch.py  go2_charge.launch.py  nav2_launch.py  sensor_launch.py  slam_launch.py
go2_sdk/urdf/: go2.urdf
my_camera_pkg/: package.xml  setup.py
my_camera_pkg/SLAM_config/: nav2_params.yaml
my_camera_pkg/config/1080_logi_cam/: camera_info.yaml
my_camera_pkg/config/unitree_go2_cam/: camera_info.yaml
my_camera_pkg/config/unitree_go2_cam_indiana/: ost.yaml
my_camera_pkg/launch/: usb_camera_calibrated_launch.py
my_camera_pkg/my_camera_pkg/: apriltag_detector.py  go2_apriltag_detector.py  go2_nav_to_charger.py  go2_nav_to_charger_final.py  go2_tag_charger.py
om_api/: CMakeLists.txt  package.xml
om_api/msg/: LocalizationPose.msg  MapStorage.msg  OMAIReponse.msg  OMAIRequest.msg  OMAPIRequest.msg  OMAPIResponse.msg  OMASRText.msg  OMAvatarFace.msg  OMAvatarFaceRequest.msg  OMAvatarFaceResponse.msg  OMConfigRequest.msg  OMConfigResponse.msg  OMModeReponse.msg  OMModeRequest.msg  OMTTSRequest.msg  Paths.msg
orchestrator/: orchestrator_api.py  package.xml  setup.py
orchestrator/launch/: orchestrator_launch.py
orchestrator/orchestrator/: __init__.py  orchestrator_api.py  orchestrator_cloud.py  ws_client.py  ws_server.py
orchestrator/orchestrator/core/: orchestrator_api.py  orchestrator_cloud.py
orchestrator/orchestrator/handlers/: api_handlers.py  ros_handlers.py
orchestrator/orchestrator/managers/: __init__.py  charging_manager.py  cloud_connection_manager.py  location_manager.py  map_manager.py  map_upload_manager.py  process_manager.py
orchestrator/orchestrator/models/: __init__.py  data_models.py
orchestrator/orchestrator/services/: cloud_api_service.py  flask_service.py  transform_service.py
orchestrator/orchestrator/utils/: ws_client.py  ws_server.py
orchestrator/resource/: orchestrator
scripts/: format.sh  lint.sh
unitree_api/: package.xml
unitree_go/: package.xml
unitree_go2_auto_dock/: package.xml  setup.cfg  setup.py
unitree_go2_auto_dock/SLAM_config/: my_map.pgm  my_map.yaml
unitree_go2_auto_dock/config/1080_logi_cam/: ost.txt
unitree_go2_auto_dock/config/unitree_go2_cam_indiana/: camera_info copy.yaml  parameter_temp.txt
unitree_go2_auto_dock/launch/: usb_camera_calibrated_launch.py  usb_camera_launch.py  usb_camera_original_launch.py  usb_camera_v4l2_launch.py
unitree_go2_auto_dock/unitree_go2_auto_dock/: apriltag_detector.py  go2_apriltag_detector.py  go2_camera_show_img.py  go2_camera_with_adjustable_publisher.py  go2_dock.py  go2_nav_to_charger_final.py  go2_tag_follower.py
unitree_hg/: package.xml
unitree_hg/msg/: BmsCmd.msg  HandCmd.msg  LowCmd.msg  LowState.msg  MainBoardState.msg  MotorCmd.msg  MotorState.msg
watchdog/: watch_sensor.py  zenoh_sesson.py
zenoh/: zenoh_bridge_config.json5
