<?xml version="1.0"?>
<package format="3">
  <name>g1_sdk</name>
  <version>0.1.0</version>
  <description>Unitree G1 Humanoid Robot ROS2 SDK</description>
  <maintainer email="hello@openmind.org">openmind</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>unitree_api</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>rtabmap_slam</depend>
  <depend>rtabmap_viz</depend>
  <depend>rtabmap_util</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>