<?xml version="1.0"?>
<package format="3">
  <name>orchestrator</name>
  <version>0.1.0</version>
  <description>Orchestrator node for OM</description>
  <maintainer email="hello@openmind.org">OpenMind</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
